--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-ble-plx": "^1.1.0",
+    "react-native-bluetooth-serial-next": "^1.2.3",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-svg": "^9.12.0",
     "react-native-svg-charts": "^5.3.0",
