--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@types/react-native-svg-charts": "^5.0.2",
     "@types/react-native-vector-icons": "^6.4.4",
+    "lottie-ios": "3.1.3",
+    "lottie-react-native": "^3.2.1",
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.2",
